sidebar collapsing implementation and bug fixes

--- a/components/src/core/components/TableSidebar/table-sidebar.scss
+++ b/components/src/core/components/TableSidebar/table-sidebar.scss
@@ -14,7 +14,9 @@
   }
   .oxd-table-sidebar-toggle-btn {
     position: absolute;
-    top: 30px;
+    width: 28px;
+    height: 28px;
+    top: 38px;
     right: -15px;
     font-size: 14px;
     min-width: 22px;
